--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,8 @@
+@charset "UTF-8";
 //base
-@import "./base/mixins";
+@import "./funtions/functions";
 @import "./base/variables";
-@import "./base/function";
+@import "./mixins/mixins";
 
 //reset
 @import "./base/reset";
@@ -9,11 +10,18 @@
 //fonts
 @import "./fonts/fonts";
 
-//common
-@import "./common/common";
+//common 
+@import './common/utils';
+@import './common/layouts';
+@import './common/forms';
+@import './common/buttons';
+@import './common/tables';
+@import './common/modal';
+@import './common/tab';
+@import './common/shop';
 
 //components
-//각각의 components에 import하였음.
+//해당 components에 import하였음.
 
 //views
-@import "./views/main";
+//해당 views에 import하였음.
