--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -1,52 +1,196 @@
-* {
-	font-family: "Spoqa Han Sans Neo", sans-serif;
-	box-sizing: border-box;
+@charset "UTF-8";
+
+/*
+ * File       : _reset.scss
+ * Author     : khr
+ *
+ * SUMMARY:
+ * 1) Reaset 
+ * 2) Form
+ 
+ */
+
+/* 1) Reaset*/
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+[class^='heading-'] {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-weight: 400;
+	//letter-spacing: 0.05em;
+	// text-transform: uppercase;
 }
 
-html,
-body,
-#app {
-	background-color: #FFF;
-	color: #333;
-	width: 100%;
-	height: 100%;
-}
 
 body {
-	overflow-x:hidden;
+	margin: 0;
 }
 
-span, p, a, h1, h2, h3, h4, h5, h6, button, textarea, input, select {
-	transform: skew(-0.1deg);
+
+main {
+	display: block;
 }
+
+/**
+* 1. Firefox에서 올바른 상자 크기를 추가함.
+* 2. Edge 및 IE에서 오버플로를 표시함.
+ */
+
+hr {
+	-webkit-box-sizing: content-box;
+	box-sizing: content-box;
+	/* 1 */
+	height: 0;
+	/* 1 */
+	overflow: visible;
+	/* 2 */
+}
+
+
+pre {
+	font-family: monospace, monospace;
+	font-size: 1em;
+
+}
+
 
 a {
-	color: #333;
+	color: inherit;
+	text-decoration: none;
+	background-color: transparent;
 }
 
-textarea, input, select {
-	outline: none;
-	border: none;
-	background: none;
+/**
+* 1. Chrome 57에서 하단 테두리 제거
+* 2. Chrome, Edge, IE, Opera 및 Safari에서 올바른 텍스트 장식을 제거함.
+ */
+
+abbr[title],
+dfn[title] {
+	border-bottom: none;
+	/* 1 */
+	text-decoration: underline;
+	/* 2 */
 }
 
-button {
-	outline: none;
-	border: none;
-	background: none;
+
+b,
+strong {
+	font-weight: bolder;
+}
+
+/**
+* 1. 모든 브라우저에서 글꼴 크기 상속 및 배율을 수정함.
+* 2. 모든 브라우저에서 홀수 'em' 글꼴 크기를 수정함.
+ */
+
+code,
+kbd,
+samp {
+	font-family: monospace, monospace;
+	/* 1 */
+	font-size: 1em;
+	/* 2 */
+}
+
+
+small {
+	font-size: 80%;
+}
+
+
+
+sub,
+sup {
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
+}
+
+sub {
+	bottom: -0.25em;
+}
+
+sup {
+	top: -0.5em;
+}
+
+caption {
+	display: block;
+	position: absolute;
+	left: -9999px;
+}
+
+
+
+/**
+* 1. Edge와 IE의 텍스트 래핑을 수정함.
+* 2. IE의 '필드셋' 요소에서 색상 상속을 수정함.
+* 3. 패딩 제거
+* 
+ */
+
+legend {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	/* 1 */
+	color: inherit;
+	/* 2 */
+	display: table;
+	/* 1 */
+	max-width: 100%;
+	/* 1 */
 	padding: 0;
-	cursor: pointer;
+	white-space: normal;
+	/* 1 */
 }
 
-// .router-wrap {
-//	 position: relative;
-//	 top: 78px;
-// }
+/**
+ *Chrome, Firefox 및 Opera에서 올바른 수직 정렬을 추가함.
+ */
+
+progress {
+	vertical-align: baseline;
+}
+
+
+
+/**
+ * IE 10에 올바른 디스플레이를 추가함.
+ */
+
+details {
+	display: block;
+}
+
+
+summary {
+	display: list-item;
+}
+
+template {
+	display: none;
+}
+
+[hidden] {
+	display: none;
+}
+
+/**
+ * Margin, Padding reset
+ */
 
 html,
 body,
 div,
 span,
+applet,
 object,
 iframe,
 h1,
@@ -58,8 +202,11 @@ h6,
 p,
 blockquote,
 pre,
+a,
 abbr,
+acronym,
 address,
+big,
 cite,
 code,
 del,
@@ -69,14 +216,19 @@ img,
 ins,
 kbd,
 q,
+s,
 samp,
 small,
+strike,
 strong,
 sub,
 sup,
+tt,
 var,
 b,
+u,
 i,
+center,
 dl,
 dt,
 dd,
@@ -99,6 +251,39 @@ article,
 aside,
 canvas,
 details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+input,
+select,
+optgroup,
+button {
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+/**
+ * HTML5 Tags reset for older browsers
+ */
+
+article,
+aside,
+details,
 figcaption,
 figure,
 footer,
@@ -106,204 +291,333 @@ header,
 hgroup,
 menu,
 nav,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-	margin: 0;
+section {
+	display: block;
+}
+
+/*
+ * List
+ */
+
+ol,
+ul,
+li {
 	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: $font-size-base + px;
-	vertical-align: baseline;
-	/* background:transparent; */
-}
-
-body {
-	line-height: 1;
-}
-
-nav ul {
 	list-style: none;
 }
 
+/**
+ * Table
+ */
+
+table,
+th,
+td {
+	//border-collapse: separate;
+	border-collapse: collapse;
+
+	border-spacing: 0;
+	font-weight: normal;
+}
+
+th,
+td {
+	word-break: break-all;
+}
+
+
+fieldset,
 blockquote,
-q {
-	quotes: none;
+iframe,
+button {
+	border: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-	content: "";
 	content: none;
 }
 
-a {
-	margin: 0;
-	padding: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-	text-decoration: none;
-}
+/* 2) Form */
 
-ins {
-	background-color: #ff9;
-	color: #000;
-	text-decoration: none;
-}
+/**
+* 1. 모든 브라우저에서 글꼴 스타일을 변경함.
+* 2. Firefox 및 Safari에서 여백을 제거함.
+ */
 
-mark {
-	background-color: #ff9;
-	color: #000;
-	font-style: italic;
-	font-weight: bold;
-}
-
-del {
-	text-decoration: line-through;
-}
-
-abbr[title],
-dfn[title] {
-	border-bottom: 1px dotted;
-	cursor: help;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-hr {
-	display: block;
-	height: 1px;
-	border: 0;
-	border-top: 1px solid #cccccc;
-	margin: 1em 0;
-	padding: 0;
-}
-
+button,
 input,
-select {
+optgroup,
+select,
+textarea {
+	font-size: 1rem;
+	font-family: inherit;
+	/* 1 */
+	line-height: 1.2;
+	/* 1 */
+	margin: 0;
+	/* 2 */
+	padding: 0;
 	vertical-align: middle;
 }
 
-ol,
-ul {
-	list-style: none;
+
+
+button,
+input {
+
+	overflow: visible;
 }
 
-*::-webkit-scrollbar {
-	width: 8px;
-	height: 8px;
-	border: 0px solid #fff;
-	background-color:transparent;
+/**
+* Edge, Firefox 및 IE에서 텍스트 변환 상속을 제거함.
+* 1. Firefox에서 텍스트 변환 상속을 제거함.
+  */
+
+button,
+select {
+	/* 1 */
+	text-transform: none;
 }
 
-*::-webkit-scrollbar-thumb {
-	height: 50px;
-	width: 50px;
-	background: rgba(0,0,0,.2);
-	-webkit-border-radius: 8px;
-	border-radius: 8px;
-	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.1);
+
+
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
+	-webkit-appearance: button;
+}
+
+/**
+  * Remove the inner border and padding in Firefox.
+  */
+
+button::-moz-focus-inner,
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
+	border-style: none;
+	padding: 0;
+}
+
+/**
+  * 이전 규칙에서 설정되지 않은 포커스 스타일을 복원함.
+  */
+
+button:-moz-focusring,
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
+	outline: 1px dotted ButtonText;
+}
+
+/**
+ *1.IE 10+에서 기본 수직 스크롤 막대를 제거함.
+ *2.사용자 임의 변경 불가
+ */
+
+textarea {
+	overflow: auto;
+	/* 1 */
+	resize: none;
+	/* 2 */
+
+}
+
+/**
+* 1. IE 10에 box-sizing 설정함.
+* 2. IE 10의 패딩을 제거함.
+ */
+
+[type='checkbox'],
+[type='radio'] {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	/* 1 */
+	padding: 0;
+	/* 2 */
+}
+
+/**
+ * Chrome에서 커서 스타일의 증가 및 감소 버튼을 수정함.
+ */
+
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+}
+
+/**
+* 1. Chrome과 Safari의 모양을 수정함.
+* 2. Safari에서 아웃라인 스타일을 수정함.
+ */
+
+[type='search'] {
+	-webkit-appearance: textfield;
+	/* 1 */
+	outline-offset: -2px;
+	/* 2 */
+}
+
+/**
+ *MacOS의 Chrome과 Safari에서 내부 패딩을 제거함.
+ */
+
+[type='search']::-webkit-search-decoration {
+	-webkit-appearance: none;
+}
+
+input::-ms-clear,
+input::-ms-reveal {
+	display: none;
+	width: 0;
+	height: 0;
+}
+
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button,
+input::-webkit-search-results-button,
+input::-webkit-search-results-decoration {
+	display: none;
+}
+
+/**
+* 1. iOS와 Safari에서 클릭 가능한 유형을 스타일링할 수 없는 문제를 해결함.
+* 2. Safari에서 글꼴 속성을 'inherit'으로 변경함.
+ */
+
+::-webkit-file-upload-button {
+	-webkit-appearance: button;
+	/* 1 */
+	font: inherit;
+	/* 2 */
+}
+
+
+
+button {
+	background: transparent;
+	border: none;
+	cursor: pointer;
+	vertical-align: middle;
+	margin: 0;
+	cursor: pointer;
+	-webkit-appearance: none;
+}
+
+input {
+	font: inherit;
+	margin: 0;
+	line-height: normal;
+	-webkit-border-radius: 0;
+	-webkit-appearance: none;
+	border-radius: 0;
+	resize: none;
+}
+
+input {
+
+	&[type='submit'],
+	&[type='button'],
+	&[type='reset'] {
+		cursor: pointer;
+		-webkit-appearance: none;
+	}
+}
+
+img,
+fieldset {
 	border: 0;
+	outline: none;
 }
 
-input[type=file] {
-	position: fixed;
-	left: -99999px;
-	top: -99999px;
-}
+img {
 
-.main-title {
-	width: 100%;
-	padding-top: 194px;
-	margin-bottom: 12px;
-	font-size: 55px;
-	color: #6F5DE5;
-	text-align: center;
-}
-
-.input-group {
-	width: 100%;
-	margin-top: 43px;
-
-	display: flex;
-	align-content: center;
-	justify-content: center;
-}
-.input-group .warning-check {
-	width: 60%;
-}
-
-.input-group span {
+	border-style: none;
 	display: inline-block;
-	margin-top: 15px;
+	border: 0;
+
+	max-width: 100%;
+	height: auto;
+
+	vertical-align: top;
 }
 
-.input-group label {
-	width: 20%;
-	line-height: 65px;
-	font-size: 20px;
-}
-
-.input-group input {
-	width: 100%;
-	height: 65px;
-	background-color: #FFF;
-	border: 1px solid #B8B8B8;
-	border-radius: 8px;
-	padding: 15px;
-	font-size: 16px;
-}
-
-.input-group input.revers {
-	border: none;
-	background-color: #ECF0F1;
-}
-
-.input-group .warning-check:first-child {
-	width: 100%;
-}
-
-.input-group div:not(.warning-check) {
-	width: calc(20% - 30px);
-	margin-left: 30px;
-}
-
-.input-group div:last-child button {
-	width: 100%;
-	height: 65px;
-	border-radius: 69px;
-	background-color: #6F5DE5;
-	color: #FFF;
-	font-size: 20px;
-	border: none;
-}
-
-.loading {
-	width: 100%;
-	height: 100%;
-
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	z-index: 9999;
-
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	background-color: #FFF;
+select {
+	margin: 0;
+	resize: none;
+	vertical-align: middle;
+	-webkit-border-radius: 0;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-o-text-overflow: '';
+	text-overflow: '';
+	zoom: 1;
 
 }
 
-.loading.fadeOut {
-	animation: fadeOut 2s forwards;
+
+
+/* IE 10, 11의 네이티브 화살표 숨기기 */
+
+select::-ms-expand {
+	display: none;
+
+}
+
+/* IE 검색 'X'를 지움.*/
+input[type='search']::-ms-clear,
+input[type='search']::-ms-reveal {
+	display: none;
+	width: 0;
+	height: 0;
+}
+
+/* Chrome 검색 'X'를 지움.*/
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+	display: none;
+}
+
+/* Outline */
+* {
+	outline: none !important;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+textarea:focus {
+	outline: none !important;
+}
+
+button:focus {
+	outline: none !important;
+}
+
+input:focus {
+	outline: none !important;
+}
+
+//나눔스퀘어등 사용시  타이핑표시(**)가 되지 않는 문제 기본글꼴로 변경함.
+input[type='password'] {
+	font-family: sans-serif;
+
+	&:placeholder-shown {
+		font-family: sans-serif;
+	}
+}
+
+html {
+	-webkit-text-size-adjust: none; //텍스트의 크기를 자동으로 조절 하지 않음.
+	-webkit-font-smoothing: subpixel-antialiased; //브라우저에 표현되는 텍스트가 렌더링될 때 부드럽게 표현됨.
 }
