--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,63 +1,173 @@
-//font
-$font-size-base: 16;
-$font-family-base: "Spoqa Han Sans Neo", sans-serif;
+@charset "UTF-8";
+
+/* SUMMARY:
+// fonts
+// border
+// color 
+// spacing (범위지정)
+// breakpoints 
+// guid 
+// displays (class 생성됨)
+// functions
+// z-index 
+// shadow 
+// transition
+// bg url
+*/
+
+// fonts
+$font-family-base: "Spoqa Han Sans Neo",
+sans-serif;
+$font-size-base:16px;
 $font-weight-base: 400;
-$line-height-base: 1;
+$line-height-base: 1.5;
 $letter-spacing-base: -0.48px;
 $font-color-base: #666;
-$path: "~@/assets/img/";
-$iconPath: $path + "icon/";
+$path: "@/assets/img/";
+$iconPath: $path+"icon/";
 
-$main-color: #fb5751;
-$primary-1 : #fb5751;
-$primary-2 : #fb5751;
-$coupon-day-color: #fedddc;
+// border
+$border-color-1: #bebebe;
+$border-radius: 0.25rem;
+$border-radius-lg: 0.3rem;
+$border-radius-sm: 0.2rem;
+$rounded-pill: 50rem;
 
-/* nav */
-$img-nav-order: url(~@/assets/img/icon/btn_cart-over.png) no-repeat 50% 0;
-$img-nav-discount: url(~@/assets/img/icon/btn_coupon-over.png) no-repeat 50% 0;
-$img-nav-home: url(~@/assets/img/icon/btn_home-over.png) no-repeat 50% 0;
-$img-nav-orderList: url(~@/assets/img/icon/btn_history-over.png) no-repeat 50% 0;
-$img-nav-mypage: url(~@/assets/img/icon/btn_mypage-over.png) no-repeat 50% 0;
+// Color  
+$primary-1: #ff7700;
+$primary-2: #2a2a41;
+$error-1: #e74038;
+$danger: #ff0000;
+$dark: #333;
+$bg-color: #efefef;
 
-/* icon */
-$img-icon-check: url(~@/assets/img/icon/btn_check_over.png) no-repeat 50% 50%;
-$img-icon-check30: url(~@/assets/img/mypage/icon_check-over.png) no-repeat 50% 50%;
-$img-icon-point: url(~@/assets/img/icon/icon_point.png) no-repeat 1.133rem 0.73rem;
-$img-icon-cart: transparent url(/assets/img/icon/btn_cart.png) no-repeat 32% 45%;
+$theme-colors: ();
+$theme-colors: map-merge(('primary-1': $primary-1,
+        'primary-2': $primary-2,
+        'dark': $dark, 'white': #fff,
 
-/* popup */
-$img-icon-delivery: url(~@/assets/img/main/icon_delivery.png) no-repeat 50% 1.1rem;
+    ),
+    $theme-colors);
+// enable
+$media-query-enable: true;
 
-/* main */
-$img-main-myMenu: url(~@/assets/img/main/myMenu_plus.png) no-repeat 50% 0;
-$img-icon-plus: url(~@/assets/img/main/btn_plus-s.png) no-repeat 99% 50%;
 
-/* review */
-$img-review-full-star: url(~@/assets/img/review/icon_star-over.png) no-repeat 0 0;
-$img-review-star1: url(~@/assets/img/review/components_star1.png) no-repeat 0 0;
-$img-review-star2: url(~@/assets/img/review/components_star2.png) no-repeat 0 0;
-$img-review-star3: url(~@/assets/img/review/components_star3.png) no-repeat 0 0;
-$img-review-samll-star: url(~@/assets/img/review/icon_star-s-over.png) no-repeat 0 0;
+// spacing
+// Spacer Unit : 4 == 4px ( 여백 단위 변수 )
+// Spacer Max : 20 == 80px ( 여백 최대값 )
+$spacer: rem(4);
+$spacerUnit: 2;
+$spacerMax: 10;
+$spacers: ();
 
-$img-write-star: url(~@/assets/img/history/btn_star-over48.png) no-repeat 0 0;
+@for $i from 0 through $spacerMax {
+    $spacers: map-merge((#{$i}: $spacer * ($i/$spacerUnit)), $spacers);
+}
 
-/* order */
-$img-megaphone: url(~@/assets/img/main/icon_megaphone.png) no-repeat 0 50%;
-$img-main-coupon: url(~@/assets/img/order/components_coupon.png) no-repeat 0 55%;
-$img-menu-coupon: url(~@/assets/img/order/components_coupon.png) no-repeat 1.333rem 50%;
 
-$img-order-finish: url(~@/assets/img/history/order_finish.png) no-repeat 50% 0;
+// breakpoints 
 
-$img-procedure-order: url(~@/assets/img/history/icon_order-over.png) no-repeat 0 0;
-$img-procedure-ready: url(~@/assets/img/history/icon_ready-over.png) no-repeat 0 0;
-$img-procedure-delivery: url(~@/assets/img/history/icon_delivery-over.png) no-repeat 0 0;
-$img-procedure-done: url(~@/assets/img/history/icon_done-over.png) no-repeat 0 0;
+//
+// Size Max : 100 == 100% ( 너비 최대값 )
+$sizeMax: 100;
+// This variable affects the `.h-*` and `.w-*` classes.
+$sizes: ();
 
-$img-pick: url(~@/assets/img/history/btn_pick-over.png) no-repeat 0 0;
+// stylelint-disable-next-line scss/dollar-variable-default
+@for $i from 0 through $sizeMax {
+    $sizes: map-merge((#{$i}: $i * 1%), $sizes);
+}
 
-$img-coupon-bg: url(~@/assets/img/mypage/coupon_select.png) no-repeat 0 0;
-$img-changeOrder-bg: url(~@/assets/img/order/Components_info.png) no-repeat 0 0;
+// Font Size breakpoints
+$font-size-breakpoints: (xxxs: 14px,
+    xs: 14px,
+    sm: 14px,
+    md: 14px,
+    lg: 14px,
+    xl: 14px,
+);
 
-/* mypage */
-$img-stamp-bg: url(~@/assets/img/mypage/components_stemp-over.png) no-repeat 50% 0;
+// Grid breakpoints
+$grid-breakpoints: (xxxs: 0,
+    xxs: 320px,
+    xs: 375px,
+    sm: 576px,
+    md: 768px,
+    lg: 1024px,
+    xl: 1200px,
+    xxl: 1400px,
+    xxxl: 1600px,
+);
+
+@include _assert-ascending($grid-breakpoints, '$grid-breakpoints');
+@include _assert-starts-at-zero($grid-breakpoints, '$grid-breakpoints');
+
+// Grid containers
+//
+// Define the maximum width of `.container` for different screen sizes.
+
+$container-max-widths: (xs: 576px,
+    sm: 768px,
+    md: 1024px,
+    lg: 1200px,
+);
+
+@include _assert-ascending($container-max-widths, '$container-max-widths');
+
+// guid 
+$enable-grid-classes: true;
+$grid-columns: 12 !default;
+$grid-gutter-width: 20px !default;
+$grid-row-columns: 6 !default;
+
+
+
+
+
+// displays (class 생성됨)
+$displays: none,
+inline,
+inline-block,
+block,
+table,
+table-caption,
+table-column,
+table-column-group,
+table-header-group,
+table-footer-group,
+table-row-group,
+table-row,
+table-cell,
+flex,
+inline-flex;
+$overflows: auto,
+hidden;
+$positions: static,
+relative,
+absolute,
+fixed,
+sticky;
+$user-selects: all,
+auto,
+none;
+
+
+
+// z-index 
+$zindex-dropdown: 1000;
+$zindex-sticky: 1020;
+$zindex-fixed: 1030;
+$zindex-modal-backdrop: 1040;
+$zindex-modal: 1050;
+$zindex-popover: 1060;
+$zindex-tooltip: 1070;
+
+
+// shadow 
+$box-shadow: rgba(#000, 0.2) 2px 2px 10px;
+
+
+// transition
+$transition-base: all 0.2s ease-in;
+
+// bg url
