--- a/src/assets/scss/common/_buttons.scss
+++ b/src/assets/scss/common/_buttons.scss
@@ -1,239 +1,206 @@
-//Buttons
-$btn-h: 32px;
-$btn-line-h : $btn-h - 2px;
-.btn,
-[type='button'] {
-	position: relative;
-	display: inline-block;
-	text-align: center;
-	cursor: pointer;
-	user-select: none;
-	border: 1px solid;
-	width: auto;
-	border-radius: 3px;
-	letter-spacing: -0.42px;
-	font-weight: normal;
-	height: $btn-h;
-	line-height: $btn-line-h;
-	padding: 0 4px;
+/* SUMMARY:
+// btn general
+// btn color
+// btn group
+// btn size
+// btn align
+// btn style
+*/
+
+$btn-h:45px;
+$btn-h-lg:53px;
+
+// btn general
+.btn {
+    //default
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    //custom
+    padding: 0 15px;
+    font-size: 15px;
+    height: $btn-h;
+    line-height: $btn-h;
+    border-radius: 5px;
+    letter-spacing: -0.9px;
+    -webkit-transition: 0.2s background, color ease-in-out;
+    -o-transition: 0.2s background, color ease-in-out;
+    transition: 0.2s background, color ease-in-out;
 }
 
+
+// btn color
+.btn-primary-1 {
+    background: $primary-1;
+    color: #fff;
+
+    &:disabled {
+        background: #aaa;
+    }
+}
+
+.btn-primary-2 {
+    background: $primary-2;
+    color: #fff;
+
+    &:disabled {}
+}
+
+.btn-outline-light {
+    background: #fff;
+    color: #444;
+    border: solid 1px #888;
+
+    &:disabled {
+        color: #aaa;
+        border-color: #aaa;
+    }
+}
+
+.btn-dark {
+    background: $dark;
+    color: #fff;
+}
+
+// btn group
 .btn-block {
-	display: block;
-	width: 100%;
+    width: 100%;
+}
+
+.btn-group {
+    display: flex;
+    margin: 0 -5px;
+
+
+    >.btn {
+        width: 100%;
+        margin: 0 5px;
+
+    }
+}
+
+// btn size
+
+.w-auto {
+    width: auto;
+
+}
+
+.btn-lg {
+    height: $btn-h-lg;
+    line-height: $btn-h-lg;
 }
 
 
-// color style
-
-.btn-a {
-	border-color: #bebebe;
-	background-color: #fff;
-	background-image: linear-gradient(to bottom, #fff, #f8f8f8);
-	font-weight: bold;
-	color: #333;
-
-	&:not(:disabled, .disabled, .on):hover {
-		background-image: linear-gradient(to bottom, #fff, #ececec);
-	}
-
-	&:not(:disabled, .disabled, .on):active {
-		background-image: linear-gradient(to bottom, #fcfcfc, #e0e0e0);
-	}
-
-	&:disabled,
-	&.disabled {
-		border-color: #f5f6f8;
-		background-color: #fff;
-		color: #c6c6c7;
-		cursor: default;
-	}
-
-	&.on {
-		background-color: $primary-1;
-		background-image: none;
-		border-color: $primary-1;
-		color: #fff;
-	}
-}
-
-.btn-a-dk {
-	border-color: #afb5bb;
-	background-color: #fff;
-	background-image: linear-gradient(to bottom, rgba(248, 248, 248, 0.5), #e5e5e5);
-	font-weight: bold;
-	color: #333;
-
-	&:not(:disabled, .disabled, .on):hover {
-		background-image: linear-gradient(to bottom, rgba(248, 248, 248, 0.349), #e5e5e5);
-	}
-
-	&:not(:disabled, .disabled, .on):active {
-		background-image: linear-gradient(to bottom, rgba(248, 248, 248, 0.349), #e5e5e5);
-	}
-
-	&:disabled,
-	&.disabled {
-		border-color: #f5f6f8;
-		background-color: #fff;
-		color: #c6c6c7;
-		cursor: default;
-	}
-
-	&.on {
-		background-color: $primary-1;
-		background-image: none;
-		border-color: $primary-1;
-		color: #fff;
-	}
-}
-
-.btn-b {
-	border-color: $primary-1;
-	background-color: #fff;
-	background-image: linear-gradient(to bottom, #fff, #f8f8f8);
-	font-weight: bold;
-	color: $primary-1;
-
-	&:not(:disabled, .disabled, .on):hover,
-	&:not(:disabled, .disabled, .on):active {
-		background-image: linear-gradient(to bottom, #fff 35%, #fed4b0);
-	}
-
-	&:disabled,
-	&.disabled {
-		border-color: #ffcea4;
-		background-color: #f5f6f8;
-		color: #ffcea4;
-		cursor: default;
-	}
-
-	&.on {
-		background-color: $primary-1;
-		background-image: none;
-		border-color: $primary-1;
-		color: #fff;
-	}
-}
-
-.btn-c {
-	background-color: $primary-1;
-
-	font-weight: bold;
-	color: #fff;
-
-	&:not(:disabled, .disabled, .on):hover {
-		background-color: #e56b00;
-	}
-
-	&:not(:disabled, .disabled, .on):active {
-		background-color: #c95e00;
-	}
-
-	&:disabled,
-	&.disabled {
-		background-color: #e3e3e3;
-		border-color: #e3e3e3;
-		color: #b2b2b2;
-		cursor: default;
-	}
-}
-
-.btn-d {
-	background-color: $primary-2;
-
-	font-weight: bold;
-	color: #fff;
-
-	&:not(:disabled, .disabled, .on):hover {
-		background-color: #25252b;
-	}
-
-	&:not(:disabled, .disabled, .on):active {
-		background-color: #111113;
-	}
-
-	&:disabled,
-	&.disabled {
-		background-color: #e3e3e3;
-		border-color: #e3e3e3;
-		color: #b2b2b2;
-		cursor: default;
-	}
-}
-
-.btn-budisabled {
-	cursor: default;
-}
-
-// 용도 style
-
-
-//row
-.btn-row {
-	> *:first-child {
-		margin-right: 2px;
-	}
-	> *:last-child {
-		margin-left: 2px;
-	}
-
-	.btn,
-	[class*='button-'] {
-		flex: 0 0 50%;
-		max-width: 50%;
-	}
+// btn align
+.btn-align-left {
+    text-align: left;
 }
 
 
 
-// Shapes
+// btn style
+
+.btn-icon-cart {
+    border: solid 1px #ddd;
+    width: 100%;
+    height: 60px;
+    line-height: 58px;
+    text-align: center;
+    color: #aaa;
+
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: normal;
+
+    .icon-cart {
+        background-image: url(~@/assets/images/icon/icon_cart.svg);
+        background-position: 0 0;
+        background-repeat: no-repeat;
+        background-size: 21px auto;
+        display: inline-block;
+        width: 21px;
+        height: 21px;
+        margin-right: 8px;
+        margin-top: -2px;
+    }
 
 
-.btn-round-1 {
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
+    &.on {
+        color: #ff7700;
+
+        .icon-cart {
+            background-image: url(~@/assets/images/icon/icon_cart-on.svg);
+
+        }
+
+
+    }
+
 }
 
-
-
-
-
-// Sizes
-
-.btn,
-[type='button'] {
-	&.btn-xs {
-		height: 32px;
-		line-height: 30px;
-	}
-	&.btn-md {
-		height: 40px;
-		line-height: 38px;
-		padding: 0 20px;
-		width: 160px;
-		font-size: 16px;
-	}
-
-	&.btn-lg {
-		height: 45px;
-		line-height: 43px;
-		padding: 0 20px;
-		width: 160px;
-		font-size: 16px;
-	}
-
-	&.btn-xl {
-		height: 50px;
-		line-height: 48px;
-		padding: 0 20px;
-		font-size: 16px;
-	}
-
-	&.btn-full {
-		width: 100%;
-	}
+.btn-order {
+    width: 100%;
+    border-radius: 0;
+    height: 60px;
+    line-height: 58px;
 }
 
+.btn-icon {
 
 
+    width: 100%;
+
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: normal;
+
+    i {
+
+        background-position: right center;
+        background-repeat: no-repeat;
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        margin-right: 8px;
+
+        &.icon-pay {
+            background-image: url(~@/assets/images/icon/icon_check_30.svg);
+
+            background-size: 15px auto;
+
+        }
+
+        &.icon-first-pay {
+            background-image: url(~@/assets/images/icon/icon_check-over_30.svg);
+
+            background-size: 15px auto;
+
+        }
+
+        &.icon-map {
+            background-image: url(~@/assets/images/icon/icon_map_36.svg);
+
+            background-size: 18px auto;
+
+        }
+
+        &.icon-review {
+            background-image: url(~@/assets/images/icon/icon_write_36.svg);
+
+
+            background-size: 18px auto;
+
+        }
+
+    }
+}
